<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="@dimen/dp_400"
    android:background="@mipmap/icon_register_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/register_password_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@drawable/shape_rectangle_register_bg"
        android:layout_centerVertical="true"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_password"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/register_password_edit"
            android:cursorVisible="false"
            android:hint="@string/login_password_tint"
            android:inputType="textPassword"
            style="@style/style_circle_edit"
            android:layout_marginStart="@dimen/dp_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_account_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/shape_rectangle_register_bg"
        android:layout_above="@id/register_password_group"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_account"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/register_account_edit"
            android:hint="@string/login_account_tint"
            android:cursorVisible="true"
            style="@style/style_circle_edit"
            android:layout_marginStart="@dimen/dp_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_re_password_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@drawable/shape_rectangle_register_bg"
        android:layout_below="@id/register_password_group"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_password"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/register_re_password_edit"
            android:cursorVisible="false"
            android:hint="@string/login_confirm_password_tint"
            android:inputType="textPassword"
            style="@style/style_circle_edit"
            android:layout_marginStart="@dimen/dp_4" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_36"
        android:layout_marginEnd="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/selector_yellow_corner_bg"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />
</RelativeLayout>
